<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Reservator!</string>
    <string name="app_name">Reservator</string>
    <string name="get_a_room">Get a room!</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="reserve">reserve</string>
    <string name="login">Login</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="exchange_username">Exchange username:</string>
    <string name="exchange_password">Exchange password:</string>
    <string name="fum_username">FUM3 username:</string>
    <string name="fum_password">FUM3 password:</string>
    <string name="default_fum_username">roomreservator</string>
    <string name="default_exchange_username">reserve@futurice.com</string>
    <string name="reservationTextTemplate">Reserved: ^1</string>
    <string name="book_now">Book now</string>
    <string name="dateLabelFormat">EEEE d.M.</string>
    <string name="weekLabelFormat">\'Week\' w</string>
    <string name="from">From </string>
    <string name="to">To </string>
    <string name="goBackBtn">Go back!</string>
    <string name="continueBtn">Continue</string>
    <string name="doNotModify">Do not modify these settings, go away!</string>
    <string name="onlyItTeamShouldModify">Only IT team should modify these settings.</string>
    <string name="seeAllRooms">All rooms</string>
    <string name="exchange_server_address">Exchange server address</string>
    <string name="room_name">Name of the default room</string>
    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
    <string name="PREFERENCES_SERVER_ADDRESS">serverAddress</string>
    <string name="PREFERENCES_ROOM_NAME">roomName</string>
    <string name="PREFERENCES_USERNAME">username</string>
    <string name="PREFERENCES_PASSWORD">password</string>
    <string name="PREFERENCES_FUM_USERNAME">fumUsername</string>
    <string name="PREFERENCES_FUM_PASSWORD">fumPassword</string>
    <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
    <string name="PREFERENCES_GOOGLE_ACCOUNT">googleAccount</string>
    <string name="removeUserData">Remove login info and reset settings</string>
    <string name="lobbyRoomName">Lobby</string>
    <string name="calendarError">Google Calendar error</string>
    <string name="noCalendarsError">No meeting room calendars found. Please ensure that a Google Account has been configured on this device and that Google Calendar has been set to sync the meeting room calendars.</string>
    <string name="close">Close</string>
    <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
    <string name="used_google_account">Used Google Account</string>
    <string name="allAccountsMagicWord">(All)</string>
    <string name="shown_rooms">Visible rooms</string>
    <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
    <string name="touchToReserve">Tap for reservations</string>
    <string name="bookNow">Book Now</string>
    <string name="disconnectedWarning">Disconnected!</string>
    <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin and London. More information at: www.futurice.com.\n\nThis application is published under the MIT license. You can find the source code at: http://github.com/futuriceit/meeting-room-tablet</string>
    <string name="aboutTitle">About</string>
    <string name="loadingText">Loading</string>
</resources>
