<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="0dip" >
    
	<LinearLayout
            android:id="@+id/fumLinearLayout1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dip" >

        <TextView
            android:id="@+id/fumTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fum_username"
            android:textColor="#000" >
        </TextView>

        <EditText
            android:id="@+id/fumUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:text="@string/default_fum_username"
            android:textColor="#000" >
        </EditText>

        <TextView
            android:id="@+id/fumTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fum_password"
            android:textColor="#000" >
        </TextView>

        <EditText
            android:id="@+id/fumPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="#000" >
        </EditText>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#000" >
        </Button>
    </LinearLayout>

</RelativeLayout>